# rs-opw-kinematics

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GLAM_MIGRATE.md  LICENSE  README.md  RELEASE_NOTES_2.0.md  SECURITY.md  isometries.json  mask.txt
.cargo/: config.toml
.github/workflows/: documentation.yml  release.yml  rust.yml  semver-1.3.0.yml  semver-main.yml  static.yml
calibrations/: 218622271068.json  218622271405.json  218622278505.json
calibrations/calibration_target/: methane_colors.ply  methane_colors.stl  methane_colors_reinforced.ply  methane_colors_reinforced.stl  methane_colors_reinforced_c.ply  methane_with_stand.stl
calibrations/once200/: 218622271068.json  218622271405.json  218622278505.json
calibrations/working/: 218622271068.json  218622271405.json  218622278505.json
documentation/: index.html
examples/: access_j.rs  basic.rs  basic_readme.rs  build_engraving_path.rs  calibrate_realsense.rs  cartesian_stroke.rs  complete_visible_robot.rs  constraints.rs  frame.rs  jacobian.rs  jakobian.rs  minimal_example.rs  observe_realsense.rs  observe_realsense_2.rs  observe_realsense_3.rs  paralellogram.rs  parallelogram.rs  path_cartesian_planning.rs  path_planning.rs  path_planning_idastar.rs  path_planning_rrt.rs  readme_example.rs  realsense_access_opencv.rs  realsense_one.rs  rrt_2.rs  rrt_planning.rs  tool_and_base.rs  visualize.rs
examples/visualize/: camera_controller.rs  read_trimesh.rs  robot_body_builder.rs  visualization.rs
scripts/: build_engraving_path.rs  colorize.py  colors_black.csv  colors_blue.csv  colors_copper.csv  colors_green.csv  colors_magenta.csv  colors_red.csv  colors_yellow.csv  methane.py  plan_saved_path.rs  sphere_with_recessions.py  sphere_with_six_recessions.ply  visualize_goblet.py  visualize_isometries.py
src/: annotations.rs  cartesian.rs  cartesian_planning.rs  chunked_vector.rs  collisions.rs  collisions_impl.rs  collisions_traits.rs  constraints.rs  frame.rs  jacobian.rs  jakobian.rs  joint_body.rs  kinematic_traits.rs  kinematics_impl.rs  kinematics_with_shape.rs  lib.rs  main.rs  parallelogram.rs  parameter_error.rs  parameters.rs  parameters_from_file.rs  parameters_robots.rs  path_check.rs  pose.rs  read_trimesh.rs  ros_bridge.rs  rrt.rs  simplify_joint_name.rs  stroke_planner.rs  tool.rs  urdf.rs  utils.rs
src/computer_vision/: callibration.rs  color_classifier.rs  colors.rs  dbscan_r.rs  detection.rs  find_transform.rs  hsv.rs  largest_rectangle.rs  mesh_builder.rs  meshbuilder.rs  organized_point.rs  plane.rs  plane_builder.rs  rect_builder.rs  sphere_mapper.rs  transform_io.rs
src/path_plan/: CARTESIAN.md  altered_pose.rs  calipers.rs  cartesian.rs  cylindric_mesh.rs  depth_field.rs  engraving.rs  head_lifter.rs  interpolator.rs  mesh_an.rs  mesh_from_field.rs  projector.rs  rrt.rs  rrt_to.rs  smoother.rs  super_rotation.rs  synthetic_meshes.rs  transform_plane.rs  uplifter.rs
src/planning/: cartesian_planning.rs  idastar.rs
src/realsense/: realsense_access_opencv.rs
src/tests/: cases.yaml  constraint_test.rs  constraint_test_auto.rs  constraint_test_various.rs  fanuc_m16ib20.yaml  garde_robotics.rs  mod.rs  test_depth_field.rs  test_from_yaml.rs  test_individual_link_positions.rs  test_parallelogram.rs  test_projector.rs  test_uplifter.rs  test_utils.rs  testcases.rs  tool_base_test.rs  urdf_extractor.rs
src/tests/data/: flag.ply  flag.stl  goblet.xacro  object.stl  stick.ply  stick.stl
src/tests/data/fanuc/: LICENSE.txt  fanuc_m16ib20.yaml  fanuc_m16ib20_5dof.yaml  fanuc_m16ib20_no_sign.yaml  invalid_nan_geom.yaml  m10ia_macro.xacro
src/tests/data/goblet/: LICENSE.txt  ToriLeighR.ply  _ToriLeighR.ply  goblet.ply
src/tests/data/igus/: rebel.yaml
src/tests/data/kuka/: LICENSE.txt  kr6r700sixx_macro.xacro
src/tests/data/projector/: cyl_on_sphere_X.json  cyl_on_sphere_Y.json  cyl_on_sphere_Z.json  dir_on_sphere_X_FromNegative.json  dir_on_sphere_X_FromPositive.json  dir_on_sphere_Y_FromNegative.json  dir_on_sphere_Y_FromPositive.json  flat_on_sphere_X_FromNegative.json  flat_on_sphere_X_FromPositive.json  flat_on_sphere_Y_FromNegative.json  flat_on_sphere_Y_FromPositive.json  flat_on_sphere_Z_FromNegative.json  flat_on_sphere_Z_FromPositive.json  r_Z.json  r_Z_cyl.json  r_Z_cyl_cyl.json  r_Z_cyl_sr.json
src/tests/data/staubli/: LICENSE
src/tests/data/test/: 5dof_with_nonzero_joint6.yaml  dof_in_both_places_same_value.yaml  dof_only_in_geometric_parameters.yaml  invalid_conflicting_dof.yaml  invalid_dof.yaml  invalid_offsets.yaml  invalid_sign_corrections.yaml
src/tests/data/vision/: b_Depth.raw  b_Depth_metadata.csv  c1_Depth.raw  c1_Depth_metadata.csv  distances.txt
src/utils/: chunked_vector.rs  read_trimesh.rs  simplify_joint_name.rs  utils.rs
src/visualize/: camera_controller.rs  visualization.rs
work/: useful_isos.txt
