[package]
name = "rs-opw-kinematics"
version = "1.3.6"
edition = "2024"
authors = ["Bourumir Wyngs <bourumir.wyngs@gmail.com>"]
description = "Inverse and forward kinematics for 6 axis robots with a parallel base and spherical wrist."
keywords = ["robotics", "kinematics", "path-planning", "ik", "opw"]
categories = ["science::robotics", "algorithms"]

license = "BSD-3-Clause"
repository = "https://github.com/bourumir-wyngs/rs-opw-kinematics"

readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
nalgebra = ">=0.32.1, <=0.33.2"# All versions in the range confirmed to work

# Others are only needed to read YAML or convert from URDF
#yaml-rust2 = { version = ">=0.8.0, <=0.10.0", optional = true }
yaml-rust2 = { version = "0.10.2", optional = true }
sxd-document = { version = "0.3", optional = true }
regex = { version = "1.11", optional = true }
clap = { version = "4.5.4", features = ["derive"], optional = true }

[features]
default = ["allow_filesystem"]
allow_filesystem = ["yaml-rust2", "sxd-document", "regex", "clap"]

# To disable filesystem:
#rs-opw-kinematics = { version = "1.3.6", default-features = false }

[dev-dependencies]
rand = "0.9.0"

