[package]
name = "rs-opw-kinematics"
version = "1.3.7"
edition = "2024"
authors = ["Bourumir Wyngs <bourumir.wyngs@gmail.com>"]
description = "Inverse and forward kinematics for 6 axis robots with a parallel base and spherical wrist."
keywords = ["robotics", "kinematics", "path-planning", "ik", "opw"]
categories = ["science::robotics", "algorithms"]

license = "BSD-3-Clause"

# Branch 1.3.0.
repository = "https://github.com/bourumir-wyngs/rs-opw-kinematics"

readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
nalgebra = ">=0.32.1, <=0.34"# All versions in the range confirmed to work

# Others are only needed to read YAML or convert from URDF
yaml-rust2 = { version = ">= 0.5.0, <= 0.10.3", optional = true } # All versions in the range tested
sxd-document = { version = "0.3", optional = true }
regex = { version = "1.11", optional = true }
clap = { version = "4.5.4", features = ["derive"], optional = true }

[features]
default = ["allow_filesystem"]
allow_filesystem = ["yaml-rust2", "sxd-document", "regex", "clap"]

# To disable filesystem:
# rs-opw-kinematics = { version = "1.3.7", default-features = false }
[dev-dependencies]
rand = "0.9"

