[package]
name = "rs-opw-kinematics"
version = "1.8.16"
autoexamples = true
edition = "2024"
authors = ["Bourumir Wyngs <bourumir.wyngs [at] gmail.com>"]
description = "Inverse and forward kinematics for 6 axis robots with a parallel base and spherical wrist."
keywords = ["robotics", "kinematics", "path-planning", "collisions", "opw"]
categories = ["science::robotics", "algorithms"]

license = "BSD-3-Clause"
repository = "https://github.com/bourumir-wyngs/rs-opw-kinematics"
readme = "README.md"

exclude = ["Cargo.lock"]

[dependencies]
nalgebra = ">=0.32.1, < 0.35"
rand = "0.9" # Now is needed for path planner 0.8
anyhow = "1.0"

# Optional dependencies:
# - serde-saphyr: For reading YAML files.
# - sxd-document: For reading URDF/XML files
# - regex: For regex matching in file parsing.
# - clap: For command-line argument parsing by file processor.

serde-saphyr = { version = "0.0.17", optional = true, features = ["robotics", "garde"] }
#serde-saphyr = { git = "https://github.com/bourumir-wyngs/serde-saphyr", branch = "master", optional = true, features = ["robotics", "garde"] }
garde = { version = "0.22", optional = true, features = ["derive"] }
serde = {  version = "1.0", optional = true, features = ["derive"], default-features = false }

sxd-document = { version = "0.3", optional = true }
regex = { version = ">=1.10, <=1.12", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

# Needed for collision
parry3d = { version = "0.25", optional = true }

# Paralellization of collision
rayon = { version = ">= 1.10, <=1.11", optional = true }

# For loading meshes, needed for collision and visualization
rs-read-trimesh = { version = "2.0.6", optional = true }
stl_io = { version = ">= 0.8, <= 0.10", optional = true }

# Needed for visualization. Only relevant packages are included.
bevy = { version = "0.14.2", default-features = false, features = [
    "animation", "bevy_scene", "bevy_winit",
    "bevy_pbr", "bevy_render", "bevy_text", "bevy_ui", "hdr",
    "x11", "wayland", "tonemapping_luts", "default_font",
], optional = true }
bevy_egui = { version = "0.29.0", optional = true }

# Needed for stroke planning
bitflags = ">=2.9, < 2.11"

# Copyright 2017 Takashi Ogura Apache 2 license. This is now integrated in the code (src/path_plan/rrt_to.rs)
# as we needed changes there. Dependencies for this code:
rrt = { version = "0.7.0", optional = true }
kdtree = { version = ">= 0.7, <= 0.8", optional = true }
num-traits = { version = "0.2 ", optional = true }
tracing = { version = "0.1", optional = true }
once_cell = {  version = ">=1.20, < 1.22" }

[features]
default = ["allow_filesystem", "collisions", "stroke_planning", "visualization"]
allow_filesystem = ["serde-saphyr", "garde", "serde", "sxd-document", "regex", "clap", "rs-read-trimesh", "stl_io"]
collisions = ["parry3d", "rayon"]
visualization = ["bevy", "bevy_egui", "collisions", "allow_filesystem"]
stroke_planning = ["kdtree", "num-traits", "tracing", "collisions", "rrt"]

[package.metadata]
status = "minimally maintained"

# To disable filesystem, collision and visualization support:
# rs-opw-kinematics = { version = "1.8.15", default-features = false }

[profile.release]

[profile.dev]
opt-level = 3 # Collision checks are not a bit but 100x slower when not optimized.
debug = true
